--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto GitHub</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Projeto GitHub</h1>
+    <div class="classe-github" >
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum, ad.</p>
+    </div>
 </body>
 </html>
