--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -9,5 +9,9 @@
 </head>
 <body>
     <h1>Projeto GitHub</h1>
+
+    <div class="classe-github" >
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, voluptatibus?</p>
+    </div>
 </body>
 </html>
